--- a/app/views/ordens/ordens_products/_form2.html.erb
+++ b/app/views/ordens/ordens_products/_form2.html.erb
@@ -32,6 +32,41 @@
  
         <th>Horario(Hrs)</th>
         <th>Duracion  </th>
+
+
+        <th>01</th>
+        <th>02</th>
+        <th>03</th>
+        <th>04</th>
+        <th>05</th>
+        <th>06</th>
+        <th>07</th>
+        <th>08</th>
+        <th>09</th>
+        <th>10</th>
+        <th>11</th>
+        <th>12</th>
+        <th>13</th>
+        <th>14</th>
+        <th>15</th>
+        <th>16</th>
+        <th>17</th>
+        <th>18</th>
+        <th>19</th>
+        <th>20</th>
+        <th>21</th>
+        <th>22</th>
+        <th>23</th>
+        <th>24</th>
+        <th>25</th>
+        <th>26</th>
+        <th>27</th>
+        <th>28</th>
+        <th>29</th>
+        <th>30</th>
+        <th>31</th>
+
+        <th>Total  </th>
         
         <th>Costo x Aviso  </th>
         
@@ -42,9 +77,9 @@
     <tr>
 
 
-      <td class="small bordered_bottom bordered_left" >
+      <td class="small bordered_bottom bordered_left", style="width: 80px" >
              <div class="field">
-              <%= f.collection_select :medio_detail_id, @orden_product_medio_details, :id, :name , {:include_blank=> true}, {:class=>'foo'}%>
+              <%= f.collection_select :medio_detail_id, @orden_product_medio_details, :id, :name , {:include_blank=> true}, :style=> 'width: 80px' %>
             </div>
       </td>
 
@@ -57,7 +92,7 @@
 
       <td class="small bordered_bottom bordered_left", style="width: 80px">
         <div >
-        <input type="hidden" name="ac_item_id" id="ac_item_id" value="<% if @ac_item_id %><%= @ac_item_id %><% end %>"/>
+      
           <%= f.text_field :descrip   %>
         </div>
       </td>
@@ -65,7 +100,7 @@
 
        <td class="small bordered_bottom bordered_left"> 
       <div class="field">        
-        <%= f.collection_select :tipo_aviso_id, @tipo_avisos, :id, :name, {:include_blank=> true}, {:class=>'foo'} %>
+        <%= f.collection_select :tipo_aviso_id, @tipo_avisos, :id, :name, {:include_blank=> true},:style=> 'width: 80px' %>
       </div>
       </td>
 
@@ -74,7 +109,7 @@
        <td class="small bordered_bottom bordered_left", style="width: 80px"> 
       <div class="field">
         
-        <%= f.collection_select :tipo_tarifa_id, @tipo_tarifas, :id, :name, :prompt => true %>
+        <%= f.collection_select :tipo_tarifa_id, @tipo_tarifas, :id, :name, {:include_blank=> true},:style=> 'width: 80px'%>
       </div>
       </td>
 
@@ -89,7 +124,7 @@
         <td class="small bordered_bottom bordered_left", style="width: 80px">
         <div >          
 
-          <%= f.text_field :horario  ,:style=> 'width: 40px'  %>
+          <%= f.text_field :horario  ,:style=> 'width: 70px'  %>
         </div>
       </td>
 
@@ -269,10 +304,18 @@
       </td>
 
 
+     <td class="small bordered_bottom bordered_left", style="width: 40px">
+        <div>
+            <span id="product_qty">0.00000</span>
+                
+        </div>
+      </td>
+
+
       <td class="small bordered_bottom bordered_left", style="width: 80px">
         <div class="field">
            
-         <%= f.number_field :tarifa ,:style=> 'width: 4px' ,min: 0,  :value => (number_with_precision(f.object.tarifa, :precision => 2) || 0) ,:step => 0.01  %>
+         <%= f.number_field :price ,:style=> 'width: 50px' ,min: 0,  :value => (number_with_precision(f.object.price, :precision => 2) || 0) ,:step => 0.01  %>
           </div>
 
       </td>
@@ -343,7 +386,7 @@
     });
 
 
-    $("#orden_product_tarifa").bind("keyup", function() {
+    $("#orden_product_price").bind("keyup", function() {
       updateItemOrden();      
     });
 
@@ -452,10 +495,7 @@
 
    {
 
-  
-    var quantity = $("#ac_item_quantity").val();
-    var price = $("#ac_item_price").val();
-    var discount = $("#ac_item_discount").val();
+    
 
     var d1 = $("#orden_product_d01").val();
     var d2 = $("#orden_product_d02").val();
@@ -488,40 +528,30 @@
     var d29 = $("#orden_product_d29").val();
     var d30 = $("#orden_product_d30").val();
     var d31 = $("#orden_product_d31").val();
-    var tarifa = $("#orden_product_tarifa").val();
+   
 
     var tipo_orden = <%=  @orden.tipo_orden_id %>  ;
-
-    if (tipo_orden == 1 )
-    {
-
-    
-
-       var importe = tarifa ;
-       $("#product_total").html(importe);  
-
-
-     document.getElementById("product_total").innerHTML = Number((importe).toFixed(2));
-
-
-    }
-
-    if (tipo_orden == 4)
+ 
+if (tipo_orden == 2)
      {  
-      var duracion =  <%= @orden.tiempo %>;
-      var costo  = (tarifa / 30) * duracion ;
-      var qty  = parseFloat(d1)  + parseFloat(d2)  + parseFloat(d3)  + parseFloat(d4) + parseFloat(d5)  +          parseFloat(d6)  + parseFloat(d7)  + parseFloat(d8)  + parseFloat(d9) + parseFloat(d10) +
+    
+      var duracion =   $("#orden_product_duracion").val();
+      var costo  =  $("#orden_product_price").val();
+      var qty = 0 ; 
+       qty  = parseFloat(d1)  + parseFloat(d2)  + parseFloat(d3)  + parseFloat(d4) + parseFloat(d5)  +          parseFloat(d6)  + parseFloat(d7)  + parseFloat(d8)  + parseFloat(d9) + parseFloat(d10) +
                 parseFloat(d11) + parseFloat(d12) + parseFloat(d13) + parseFloat(d14) + parseFloat(d15) + parseFloat(d16) + parseFloat(d17) + parseFloat(d18) + parseFloat(d19) + parseFloat(d20) + parseFloat(d21) + parseFloat(d22) + parseFloat(d23) + parseFloat(d24) + parseFloat(d25) + parseFloat(d26) + parseFloat(d27) +parseFloat(d28) + parseFloat(d29) + parseFloat(d30) + parseFloat(d31)  ;
 
-
+     
       var importe = qty  * costo;     
              
        document.getElementById("product_qty").innerHTML = Number((qty).toFixed(2));
        document.getElementById("product_total").innerHTML = Number((importe).toFixed(2));
-        document.getElementById("product_price").innerHTML = Number((costo).toFixed(2));
+       
        }
-    }
-
+    
+   }
 
   });
+
+
 </script>
