--- a/app/views/companies/configuracion.html.erb
+++ b/app/views/companies/configuracion.html.erb
@@ -71,6 +71,19 @@
 
 <%= hr() %>
   
+
+
+  <h3>
+    <%= image_tag("invoice_32.png", :class => "vmiddle") %>
+    <%= link_to "Usuarios", users_path %>
+  </h3>
+
+  <p>
+     Agregar, editar or eliminar usuarios para tu negocio.
+  </p>
+
+<%= hr() %>
+  
 </div>
 
 <div class="mid_box">
