--- a/app/views/reports/rpt_cadmin4.html.erb
+++ b/app/views/reports/rpt_cadmin4.html.erb
@@ -1,12 +1,3 @@
-<%= render 'layouts/charts' %>
-<%
-invoices_subtotal = 0
-invoices_tax = 0
-invoices_total = 0
-subtotals = []
-taxes = []
-totals = []
-%>
 
 
 <div class="breadcrumbs">
@@ -18,23 +9,22 @@ totals = []
 <h3>
   <%= image_tag("reports_48.png", :class => "vmiddle") %>
  Reporte de cuentas clientes 
-</h3	>
+</h3>
 
 
-  <%= form_tag(rpt_cadmin_01_supplier_payments_path, :method => "get") do %>
+  <%= form_tag(rpt_cadmin_04_supplier_payments_path, :method => "get") do %>
 
   <div class="field">
     Desde <input type="date" name="fecha1" value= <%= Date.today - 30 %> style = "width: 150px" >
   </div>
-
-  <div class="field">
-    Hasta <input type="date" name="fecha2" value = <%= Date.today %>style = "width: 150px" >
+ 
+   <div class="field">
+    Hasta <input type="date" name="fecha2" value = <%= Date.today %> style = "width: 150px" >
   </div>
   
   
-  <%= submit_tag  "PDF", :name => "print"    %>
 
-  <%= submit_tag "Excel", :name => "print" %>
+  <%= submit_tag "Generar", :name => "print" %>
      
 <% end %>
 <br />
