--- a/app/views/medios/_form.html.erb
+++ b/app/views/medios/_form.html.erb
@@ -45,8 +45,8 @@
   <table>
    <tr>
    <th style="width: 5%">Item </th>
-   <th style="width: 10%">Cliente </th>
-   <th style="width: 30%">Contacto </th>
+   <th style="width: 10%">Code </th>
+   <th style="width: 30%">Producto </th>
   
    
    <% nroitem = 1 %>
