--- a/app/views/medios/show.html.erb
+++ b/app/views/medios/show.html.erb
@@ -16,7 +16,7 @@
 </p>
 
      
-
+  <%= link_to "Agregar  ", new_medio_medio_detail_path(@medio),class: "button" %>  
   
   <div class="button">
 
