--- a/app/views/marcas/new.html.erb
+++ b/app/views/marcas/new.html.erb
@@ -1,5 +1,30 @@
-<h1>Nueva Marca</h1>
+
+<% if not @ajax %>
+  <div class="breadcrumbs">
+    <%= link_to "My companies", "/companies" %> &raquo;
+    <%= link_to @company.name, @company %> &raquo;
+    <%= link_to "Marcas", marcas_path %>
+  </div>
+
+  <h1>
+    <%= image_tag("clients_48.png", :class => "vmiddle") %>
+    New Marca 
+  </h1>
+  
+  
+  <p>
+    To create a nueva marca, please fill out the following form.  Fields marked with <strong>*</strong> are required.
+  </p>
+<% else %>
+  <h4>
+    Nueva marca 
+  </h4>
+<% end %>
 
 <%= render 'form' %>
 
-<%= link_to 'Regresa', marcas_path %>
+<% if not @ajax %>
+  <div class="button">
+    <%= link_to 'Regresar', marcas_path  %>
+  </div>
+<% end %>
