--- a/app/views/medios/medio_details/_form.html.erb
+++ b/app/views/medios/medio_details/_form.html.erb
@@ -5,10 +5,13 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
-    <%= f.input :code %>
-    <%= f.input :name %>
-      
-  
+
+    
+   <div class="field">
+    <%= f.label :name, "Producto" %><br />
+    <%= f.text_field :name %>
+  </div>
+
   </div>
 
   <div class="form-actions">
