--- a/app/views/ordens/ordens_products/_form7.html.erb
+++ b/app/views/ordens/ordens_products/_form7.html.erb
@@ -13,20 +13,60 @@
   </div>
 <% end %>
 
+<p>
+  <b>Orden:</b>
+  <%= @orden.code %>
+</p>
+
+<p>
+  
+
+<b>Tipo de Orden:</b>
+  <%= @orden.tipo_orden.descrip %>
+
+</p>
+
+<b>Medio:</b>
+  <%= @orden.medio.id %>
+
+  <%= @orden.medio.descrip %>
+</p>
+
+<b>Marca:</b>
+  <% if @orden.marca.nil? %>
+  <% @orden.marca_id %>
+  <% else %>
+  <%= @orden.marca.name %>
+  
+  <% end %>
+</p>
+<b>Producto:</b>
+  <%= @orden.producto.name %>
+</p>
+
+<b>Version:</b>
+  <%= @orden.version.descrip %>
+</p>
+
+<b>Duracion:</b>
+  <%= @orden.tiempo %>
+</p>
+
+<input id="medio_id" name="medio_id" type="hidden" value = <%= @orden.medio_id %>>
 
 <%= form_for [@orden, @orden_product] do |f| %>
 
    <div class="form-inputs">
 
-
-      
+    
    <table>
       <tr>
         <th>Website </th>
         <th>Producto  </th>
+        <th> + </th>        
         <th>Motivo </th>
-        
-        <th>Tarifa CPM</th>
+        <th>Tipo de Tarifa</th>
+        <th>Tarifa</th>
         <th>Impresiones/Clicks </th>
         
 
@@ -71,25 +111,43 @@
 
       </tr>
     <tr>
- <td class="small bordered_bottom bordered_left", style="width: 80px">
-        <div >
+     <td class="small bordered_bottom bordered_left", style="width: 80px">
+        <div class="field">
       
           <%= f.text_field :website   %>
         </div>
       </td>
 
 
-      <td class="small bordered_bottom bordered_left", style="width: 80px" >
+      <td class="small bordered_bottom bordered_left", style="width: 110px" >
              <div class="field">
-              <%= f.collection_select :medio_detail_id, @orden_product_medio_details, :id, :name , {:include_blank=> true}, :style=> 'width: 80px' %>
+              <%= f.collection_select :medio_detail_id, @orden_product_medio_details, :id, :name , {:include_blank=> true}, :style=> 'width: 100px' %>
+               
             </div>
+            
+      </td>
+      <td>
+        
+       <div class="field">
+         <a href="#" onclick="createMedioOrden(); return false;"> (+) </a>
+        </div>
+         
       </td>
 
       <td class="small bordered_bottom bordered_left", style="width: 80px" >
         <div class="field">
          <%= @orden.version.descrip  %>    
+         
       </div>
     </div>
+
+
+       <td class="small bordered_bottom bordered_left">
+         <div class="field">
+      
+          <%= f.text_field :tipo_tarifa ,:style=> 'width: 40px'    %>
+        </div>
+      </td>
 
       <td class="small bordered_bottom bordered_left", style="width: 80px">
        
@@ -312,6 +370,7 @@
 
   <div class="form-actions">
     <%= f.hidden_field :avisodetail_id,:id => "ac_item_id" %>    
+    
     <%= f.submit %>
 
   </div>
