--- a/app/views/productos/new.html.erb
+++ b/app/views/productos/new.html.erb
@@ -1,5 +1,31 @@
-<h1>New Producto</h1>
+
+
+<% if not @ajax %>
+  <div class="breadcrumbs">
+    <%= link_to "My companies", "/companies" %> &raquo;
+    <%= link_to @company.name, @company %> &raquo;
+    <%= link_to "Productos", productos_path %>
+  </div>
+
+  <h1>
+    <%= image_tag("clients_48.png", :class => "vmiddle") %>
+    New Marca 
+  </h1>
+  
+  
+  <p>
+    To create a nueva producto, please fill out the following form.  Fields marked with <strong>*</strong> are required.
+  </p>
+<% else %>
+  <h4>
+    Nuevo Producto
+  </h4>
+<% end %>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', productos_path %>
+<% if not @ajax %>
+  <div class="button">
+    <%= link_to 'Regresar', productos_path  %>
+  </div>
+<% end %>
