--- a/app/views/versions/new.html.erb
+++ b/app/views/versions/new.html.erb
@@ -1,5 +1,30 @@
-<h1>New Version</h1>
+
+<% if not @ajax %>
+  <div class="breadcrumbs">
+    <%= link_to "My companies", "/companies" %> &raquo;
+    <%= link_to @company.name, @company %> &raquo;
+    <%= link_to "Versions", versions_path %>
+  </div>
+
+  <h1>
+    <%= image_tag("clients_48.png", :class => "vmiddle") %>
+    New Marca 
+  </h1>
+  
+  
+  <p>
+    To create a nueva version, please fill out the following form.  Fields marked with <strong>*</strong> are required.
+  </p>
+<% else %>
+  <h4>
+    Nuevo Version
+  </h4>
+<% end %>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', versions_path %>
+<% if not @ajax %>
+  <div class="button">
+    <%= link_to 'Regresar', versions_path  %>
+  </div>
+<% end %>
